--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -79,7 +79,136 @@
   "name_the_title_(House-Apartment-Office)":"Name the title (House-Apartment-Office)",
   "choose_governorate":"Choose Governorate",
   "cairo":"Cairo",
-  "mansoura":"Mansoura"
+  "mansoura":"Mansoura",
+  "or":"Or",
+  "5.00_pounds":"5.00 Pounds",
+  "al_Noor_orange_juice_egyptian_2kg":"Al Noor orange juice Egyptian 2kg",
+  "add_to_cart":"Add to Cart",
+  "upward":"Upward",
+  "poultry_meats_and_seafood":"Poultry, meats, and seafood",
+  "all":"All",
+  "poultry":"Poultry",
+  "meat":"Meat",
+  "seafood":"Seafood",
+  "pound":"pound",
+  "available":"Available",
+  "basket":"Basket",
+  "package":"Package",
+  "description":"Description",
+  "get_ready_to_savor_the_delicious_the_delicious_taste_of_crispy_fries!_with their_versatile_nature_and_delightful_flavor,fries_are_a_staple_in_the_kitchens_of_many_cultures_around_the_world.":"Get ready to savor the delicious taste of crispy fries! With their versatile nature and delightful flavor, fries are a staple in the kitchens of many cultures around the world.",
+  "see_more":"See more",
+  "view_details":"View details",
+  "imported_green_apples_1kg":"Imported green apples 1 kg",
+  "hello,mohamed":"Hello,mohamed",
+  "account_information":"Account Information",
+  "mohamed_samir":"Mohamed samir",
+  "mohamed":"Mohamed",
+  "samir":"Samir",
+  "deleate _account":"Delete Account",
+  "are_you_sure_you_want_to_delete_this_account?":"Are you sure you want to delete this account",
+  "delete":"Delete",
+ "change_the_password":"Change the password",
+  "cancel":"Cancel",
+  "the_old_password":"The old password",
+ 
+  "confirm_the_new_password":"Confirm the new password",
+  "the_new_password_new_password(must_be_at_least_8_letters_or_numbers)":"The new password (new password must be at least 8 letters or numbers)",
+  "there_is_a_long_established_fact_that_the_readable_content_of_a_page_will_distract_the_reader_from_focusingon_the_text's_outer_appearance_or_the_layout_of_the_paragraphson_the_page_they_are_reading.therefore,the_Lorem_Ipsum_method_is_used.":"There is a long established fact that the readable content of a page will distract the reader from focusing on the text's outer appearance or the layout of the paragraphs on the page they are reading. Therefore, the Lorem Ipsum method is used.",
+  
+  "there_is_a_long_established_fact_that":"There is a long established fact that",
+  "delete_the_address":"Delete the address",
+  "are_you_sure_you_want_to_delete_this_address?":"Are you sure you want to delete this address",
+  "mansoura_talkha_corner_of_agriculture_street_al-Maghazi_tower":"Mansoura talkha corner of agriculture street Al Maghazi tower",
+  "office":"Office",
+  "agriculture_street":"Agriculture street",
+  "al-maghazi_tower":"Al Maghazi Tower",
+  "received":"Received",
+  "cancelled":"Cancelled",
+  "order_number":"Order Number",
+  "show":"Show",
+  "order_history":"Order History",
+  "delivery_address":"Delivery address",
+  "order_status":"Order Status",
+  "it_has_been_canceled.":"It has been canceled.",
+  "total_price:":"Total price:",
+  "1000.00 pounds":"1000.00 Pounds",
+  "delivery_to:home":"Delivery to:home",
+  "azzhar_street 2,hawalli,nasr city":"Azzhar street 2, Hawalli, Nasr city",
+  "price:":"Price:",
+  "20 pounds":"20 Pounds",
+  "total:":"Total:",
+  "the_minimum_order":"The minimum order",
+  "2000 pounds":"2000 Pounds",
+  "total":"Total",
+  "3000 pounds":"3000 Pounds",
+  "less than the minimum required to complete the purchase. Remaining to complete the purchase is 1700 pounds.":"Less than the minimum required to complete the purchase. Remaining to complete the purchase is 1700 pounds.",
+  "subtotal":"Subtotal",
+  "300 pounds":"300 Pounds",
+  "payment":"Payment",
+  "choose address":"Choose address",
+  "add new address":"Add new address",
+  "an address already exists":"An address already exists",
+  "add a new address":"Add a new address",
+  "name the title (house-apartment-office)":"Name the title (house-apartment-office)",
+  "delivery address":"Delivery address",
+  "area":"Area",
+  "name/Number of the building (apartment-tower-villa)":"Name/Number of the building (apartment-tower-villa)",
+  "apartment/Villa Number":"Apartment/Villa Number",
+  "add address":"Add address",
+  "choose delivery time":"Choose delivery time",
+  "delivery now":"Delivery now",
+  "delivery later":"Delivery later",
+  "today":"Today",
+  "tomorrow":"Tomorrow",
+  "payment method":"Payment method",
+  "cash on delivery":"Cash on delivery",
+  "the subtotal":"The subtotal",
+  "delivery fees":"Delivery fees",
+  "discount rate":"Discount rate",
+  "pounds":"Pounds",
+  "the request has been successfully executed.":"The request has been successfully executed.",
+  "Please wait":"Please wait",
+  "bill":"Bill",
+  "invoice number":"Invoice number",
+  "invoice date":"Invoice date",
+  "total quantity":"Total quantity",
+  "total invoice":"Total invoice",
+  "deduction / addition":"Deduction / Addition",
+  "the final price":"The final price",
+  "tracking the order":"Tracking the order",
+  "home page":"Home page",
+  "number":"Number",
+  "product name":"Product name",
+  "amount":"Amount",
+  "price piece":"price piece",
+  "pepsi 1.5 liters carton":"Pepsi 1.5 liters carton"
+
+ 
+  
+
+
+  
+
+ 
+
+  
+  
+ 
+ 
+  
+ 
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
+  
+  
   
 }
 
