--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -188,7 +188,8 @@
    "on the way to you":"في الطريق إليك",
    "the order is currently in preparation. It will be ready for shipping as soon as possible":"الطلب في مرحلة التجهيز الأن سيتم تحضيره للشحن في اقرب وقت ممكن ",
    "delivered":"تم التسليم",
-   "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products":"تم استلام طلبك بنجاح شكرا لك علي الشراء نامل ان تكون راضيا عن منتجاتك"
+   "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products":"تم استلام طلبك بنجاح شكرا لك علي الشراء نامل ان تكون راضيا عن منتجاتك",
+   "shop now":"تسوق الان"
    
 
 
