--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -192,7 +192,8 @@
   "on the way to you":"On the way to you",
   "the order is currently in preparation. It will be ready for shipping as soon as possible":"The order is currently in preparation. It will be ready for shipping as soon as possible",
   "delivered":"Delivered",
-  "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products":"Your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products"
+  "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products":"Your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products",
+  "shop now":"Shop now"
 
  
   
