Update the localization

--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,228 +1,194 @@
-
 {
-  "select_branch":"Select Branch",
-  "cairo_branch":"Cairo Branch",
-  "mansoura_Branch":"Mansoura Branch",
+  "select_branch": "Select Branch",
+  "cairo_branch": "Cairo Branch",
+  "mansoura_Branch": "Mansoura Branch",
   "login": "Login",
+  "follow_a_guest": "Continue as Guest",
   "create_new_account": "Create New Account",
   "my_certificates": "My Certificates",
   "email": "Email",
   "password": "Password",
-  "forgot_password": "Forgot your password?",
+  "forgot_password": "Forgot Password?",
   "no_account": "Don't have an account?",
   "signup": "Sign Up",
-  "follow_a_guest":"Follow a Guest",
   "name": "Name",
   "phone_number": "Phone Number",
   "country": "Country",
   "gender": "Gender",
-  "birth_date": "Date of Birth",
+  "birth_date": "Birth Date",
   "have_account": "Already have an account? Login",
-  "first_name":"First name",
-  "last_name":"Last name",
-  "confirm_password":"Confirm Password",
-  "sign up":"Sign up",
-  "check_in":"Check in",
-  "phone_number_(not_less_than_11_digits)":"Phone number (not less than 11 digits)",
-  "password_(not_less_than_8_letters)":"Password (not less than 8 letters )",
-  "email_(optional)":"Email (optional)",
-  "address":"Address",
-  "governorate":"Governorate",
-  "region":"Region",
-  "street":"Street",
-  "house":"House",
-  "address_details":"Address details",
-  "home":"Home",
-  "categories":"Categories",
-  "cart":"Cart",
-  "favorites":"Favorites",
-  "menu":"Menu",
-  "city":"City",
-  "name_number_of_the_building_(building_tower_villa)":"Name number of the building (Building tower villa)",
-  "floor":"Floor",
-  "apartment_number":"Apartment number",
-  "name_the_title":"Name the title",
-  "delivery_instructions":"Delivery Instructions",
-  "egypt":"Egypt",
-  "type_here_the_one_you_want_to_search_for":"Type here the one you want to search for",
-  "wait_for_us_soon_wait_for_us_soon_wait_for_us_soon_wait_for_us_soon":"Wait for us soon wait for us soon wait for us soon wait for us soon",
-  "offers":"Offers",
-  "fruits_and_vegetables":"Fruits and vegetables",
-  "fresh_food":"Fresh food",
-  "baked":"Baked",
-  "poultry_meat_seafood":"Poultry meat Seafood",
-  "ready_to_eat":"Ready to eat",
-  "view_more":"View more",
-  "order_again":"Order again",
-  "view_all":"View all",
-  "best_sellers":"Best Sellers",
-  "most_discount":"Most Discount",
-  "new_arrivals":"New Arrivals",
-  "imported_green_apple_1kg":"Imported green apple 1kg",
-  "similar_products":"Similar Products",
-  "most_requested":"Most Requested",
-  "i_watched_it_recently":"I watched it recently",
-  "new_registration":"New Registration",
-  "who_are_we?":"Who are we?",
-  "frequently_asked_questions":"Frequently Asked Questions",
-  "policy_and_Privacy":"Policy and Privacy",
-  "change_language":"Change Language",
-  "my_previous_orders":"My Previous Orders",
-  "saved_addresses":"Saved Addresses",
-  "sign_out":"Sign Out",
-  "my_current_orders":"My Current Orders",
-  "my_personal_account":"My Personal Account",
-  "(main_title)":"(Main Title)",
-  "edit_address":"Edit Address",
-  "current_address":"Current Address",
-  "name/number_of_the_building_(apartment-tower-villa)":"Name/number of the building (Apartment-tower-villa)",
-  "apartment/villa_number":"Apartment/villa number",
-  "name_the_title_(House-Apartment-Office)":"Name the title (House-Apartment-Office)",
-  "choose_governorate":"Choose Governorate",
-  "cairo":"Cairo",
-  "mansoura":"Mansoura",
-  "or":"Or",
-  "5.00_pounds":"5.00 Pounds",
-  "al_Noor_orange_juice_egyptian_2kg":"Al Noor orange juice Egyptian 2kg",
-  "add_to_cart":"Add to Cart",
-  "upward":"Upward",
-  "poultry_meats_and_seafood":"Poultry, meats, and seafood",
-  "all":"All",
-  "poultry":"Poultry",
-  "meat":"Meat",
-  "seafood":"Seafood",
-  "pound":"pound",
-  "available":"Available",
-  "basket":"Basket",
-  "package":"Package",
-  "description":"Description",
-  "get_ready_to_savor_the_delicious_the_delicious_taste_of_crispy_fries!_with their_versatile_nature_and_delightful_flavor,fries_are_a_staple_in_the_kitchens_of_many_cultures_around_the_world.":"Get ready to savor the delicious taste of crispy fries! With their versatile nature and delightful flavor, fries are a staple in the kitchens of many cultures around the world.",
-  "see_more":"See more",
-  "view_details":"View details",
-  "imported_green_apples_1kg":"Imported green apples 1 kg",
-  "hello,mohamed":"Hello,mohamed",
-  "account_information":"Account Information",
-  "mohamed_samir":"Mohamed samir",
-  "mohamed":"Mohamed",
-  "samir":"Samir",
-  "deleate _account":"Delete Account",
-  "are_you_sure_you_want_to_delete_this_account?":"Are you sure you want to delete this account",
-  "delete":"Delete",
- "change_the_password":"Change the password",
-  "cancel":"Cancel",
-  "the_old_password":"The old password",
- 
-  "confirm_the_new_password":"Confirm the new password",
-  "the_new_password_new_password(must_be_at_least_8_letters_or_numbers)":"The new password (new password must be at least 8 letters or numbers)",
-  "there_is_a_long_established_fact_that_the_readable_content_of_a_page_will_distract_the_reader_from_focusingon_the_text's_outer_appearance_or_the_layout_of_the_paragraphson_the_page_they_are_reading.therefore,the_Lorem_Ipsum_method_is_used.":"There is a long established fact that the readable content of a page will distract the reader from focusing on the text's outer appearance or the layout of the paragraphs on the page they are reading. Therefore, the Lorem Ipsum method is used.",
-  
-  "there_is_a_long_established_fact_that":"There is a long established fact that",
-  "delete_the_address":"Delete the address",
-  "are_you_sure_you_want_to_delete_this_address?":"Are you sure you want to delete this address",
-  "mansoura_talkha_corner_of_agriculture_street_al-Maghazi_tower":"Mansoura talkha corner of agriculture street Al Maghazi tower",
-  "office":"Office",
-  "agriculture_street":"Agriculture street",
-  "al-maghazi_tower":"Al Maghazi Tower",
-  "received":"Received",
-  "cancelled":"Cancelled",
-  "order_number":"Order Number",
-  "show":"Show",
-  "order_history":"Order History",
-  "delivery_address":"Delivery address",
-  "order_status":"Order Status",
-  "it_has_been_canceled.":"It has been canceled.",
-  "total_price:":"Total price:",
-  "1000.00 pounds":"1000.00 Pounds",
-  "delivery_to:home":"Delivery to:home",
-  "azzhar_street 2,hawalli,nasr city":"Azzhar street 2, Hawalli, Nasr city",
-  "price:":"Price:",
-  "20 pounds":"20 Pounds",
-  "total:":"Total:",
-  "the_minimum_order":"The minimum order",
-  "2000 pounds":"2000 Pounds",
-  "total":"Total",
-  "3000 pounds":"3000 Pounds",
-  "less than the minimum required to complete the purchase. Remaining to complete the purchase is 1700 pounds.":"Less than the minimum required to complete the purchase. Remaining to complete the purchase is 1700 pounds.",
-  "subtotal":"Subtotal",
-  "300 pounds":"300 Pounds",
-  "payment":"Payment",
-  "choose address":"Choose address",
-  "add new address":"Add new address",
-  "an address already exists":"An address already exists",
-  "add a new address":"Add a new address",
-  "name the title (house-apartment-office)":"Name the title (house-apartment-office)",
-  "delivery address":"Delivery address",
-  "area":"Area",
-  "name/Number of the building (apartment-tower-villa)":"Name/Number of the building (apartment-tower-villa)",
-  "apartment/Villa Number":"Apartment/Villa Number",
-  "add address":"Add address",
-  "choose delivery time":"Choose delivery time",
-  "delivery now":"Delivery now",
-  "delivery later":"Delivery later",
-  "today":"Today",
-  "tomorrow":"Tomorrow",
-  "payment method":"Payment method",
-  "cash on delivery":"Cash on delivery",
-  "the subtotal":"The subtotal",
-  "delivery fees":"Delivery fees",
-  "discount rate":"Discount rate",
-  "pounds":"Pounds",
-  "the request has been successfully executed.":"The request has been successfully executed.",
-  "Please wait":"Please wait",
-  "bill":"Bill",
-  "invoice number":"Invoice number",
-  "invoice date":"Invoice date",
-  "total quantity":"Total quantity",
-  "total invoice":"Total invoice",
-  "deduction / addition":"Deduction / Addition",
-  "the final price":"The final price",
-  "tracking the order":"Tracking the order",
-  "home page":"Home page",
-  "number":"Number",
-  "product name":"Product name",
-  "amount":"Amount",
-  "price piece":"price piece",
-  "pepsi 1.5 liters carton":"Pepsi 1.5 liters carton",
-  "order date April 11, 2025":"Order date April 11, 2025",
-  "the order has been received":"the order has been received",
-  "your order has been successfully received and will be processed soon. Thank you for choosing us":"Your order has been successfully received and will be processed soon. Thank you for choosing us",
-  "the order has been confirmed":"The order has been confirmed",
-  "your order has been confirmed successfully and we are now in the process of preparing it for shipment to you":"Your order has been confirmed successfully and we are now in the process of preparing it for shipment to you",
-  "the order is in the preparation stage":"The order is in the preparation stage",
-  "the order is on its way to you. It will be delivered by shipping service soon":"The order is on its way to you. It will be delivered by shipping service soon",
-  "on the way to you":"On the way to you",
-  "the order is currently in preparation. It will be ready for shipping as soon as possible":"The order is currently in preparation. It will be ready for shipping as soon as possible",
-  "delivered":"Delivered",
-  "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products":"Your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products",
-  "shop now":"Shop now",
-  "the new password":"The new password"
-
- 
-  
-
-
-  
-
- 
-
-  
-  
- 
- 
-  
- 
-  
-  
-  
-  
-  
-  
-  
-  
-
-  
-  
-  
-  
+  "first_name": "First Name",
+  "last_name": "Last Name",
+  "confirm_password": "Confirm Password",
+  "sign up": "Sign Up",
+  "phone_number_(not_less_than_11_digits)": "Phone number (at least 11 digits)",
+  "password_(not_less_than_8_letters)": "Password (minimum 8 characters)",
+  "email_(optional)": "Email (optional)",
+  "address": "Address",
+  "governorate": "Governorate",
+  "region": "Region",
+  "street": "Street",
+  "house": "House",
+  "delivery_instructions": "Delivery Instructions",
+  "home": "Home",
+  "categories": "Categories",
+  "cart": "Cart",
+  "favorites": "Favorites",
+  "menu": "Menu",
+  "city": "City",
+  "name_number_of_the_building_(building_tower_villa)": "Building Name/Number (Apartment - Tower - Villa)",
+  "floor": "Floor",
+  "apartment_number": "Apartment Number",
+  "name_the_title": "Label Address",
+  "egypt": "Egypt",
+  "type_here_the_one_you_want_to_search_for": "Type here what you're looking for",
+  "wait_for_us_soon_wait_for_us_soon_wait_for_us_soon_wait_for_us_soon": "Coming soon, stay tuned...",
+  "offers": "Offers",
+  "fruits_and_vegetables": "Fruits & Vegetables",
+  "fresh_food": "Fresh Food",
+  "baked": "Bakery",
+  "poultry_meat_seafood": "Poultry, Meat & Seafood",
+  "ready_to_eat": "Ready to Eat",
+  "view_more": "View More",
+  "order_again": "Order Again",
+  "view_all": "View All",
+  "best_sellers": "Best Sellers",
+  "most_discount": "Top Discounts",
+  "new_arrivals": "New Arrivals",
+  "imported_green_apple_1kg": "Imported Green Apple 1kg",
+  "similar_products": "Similar Products",
+  "most_requested": "Most Requested",
+  "i_watched_it_recently": "Recently Viewed",
+  "new_registration": "New Registration",
+  "who_are_we?": "Who Are We?",
+  "frequently_asked_questions": "FAQs",
+  "policy_and_Privacy": "Policy & Privacy",
+  "change_language": "Change Language",
+  "my_previous_orders": "My Past Orders",
+  "saved_addresses": "Saved Addresses",
+  "sign_out": "Sign Out",
+  "my_current_orders": "My Current Orders",
+  "my_personal_account": "My Account",
+  "(main_title)": "(Main Title)",
+  "edit_address": "Edit Address",
+  "current_address": "Current Address",
+  "name/number_of_the_building_(apartment-tower-villa)": "Building Name/Number (Apartment - Tower - Villa)",
+  "apartment/villa_number": "Apartment/Villa Number",
+  "name_the_title_(House-Apartment-Office)": "Label Address (Home - Apartment - Office)",
+  "choose_governorate": "Select Governorate",
+  "cairo": "Cairo",
+  "mansoura": "Mansoura",
+  "or": "or",
+  "5.00_pounds": "5.00 EGP",
+  "al_Noor_orange_juice_egyptian_2kg": "Al Noor Orange Juice Egyptian 2kg",
+  "add_to_cart": "Add to Cart",
+  "upward": "Scroll Up",
+  "poultry_meats_and_seafood": "Poultry, Meat & Seafood",
+  "all": "All",
+  "poultry": "Poultry",
+  "meat": "Meat",
+  "seafood": "Seafood",
+  "pound": "EGP",
+  "available": "Available",
+  "basket": "Pallet",
+  "package": "Package",
+  "description": "Description",
+  "get_ready_to_savor_the_delicious_the_delicious_taste_of_crispy_fries!_with their_versatile_nature_and_delightful_flavor,fries_are_a_staple_in_the_kitchens_of_many_cultures_around_the_world.": "Get ready to savor the delicious taste of crispy fries! With their versatility and rich flavor, fries are a staple in kitchens across many cultures.",
+  "see_more": "See More",
+  "view_details": "View Details",
+  "imported_green_apples_1kg": "Imported Green Apples 1kg",
+  "hello,mohamed": "Hello, Mohamed",
+  "account_information": "Account Information",
+  "mohamed_samir": "Mohamed Samir",
+  "mohamed": "Mohamed",
+  "samir": "Samir",
+  "change_the_password": "Change Password",
+  "deleate _account": "Delete Account",
+  "are_you_sure_you_want_to_delete_this_account?": "Are you sure you want to delete this account?",
+  "delete": "Delete",
+  "cancel": "Cancel",
+  "the_old_password": "Old Password",
+  "the_new_password_new_password(must_be_at_least_8_letters_or_numbers)": "New Password (at least 8 characters)",
+  "confirm_the_new_password": "Confirm New Password",
+  "there_is_a_long_established_fact_that_the_readable_content_of_a_page_will_distract_the_reader_from_focusingon_the_text's_outer_appearance_or_the_layout_of_the_paragraphson_the_page_they_are_reading.therefore,the_Lorem_Ipsum_method_is_used.": "It is a long established fact that readable content can distract from the layout and presentation. Hence, the Lorem Ipsum method is used.",
+  "there_is_a_long_established_fact_that": "It is a long established fact that",
+  "delete_the_address": "Delete Address",
+  "are_you_sure_you_want_to_delete_this_address?": "Are you sure you want to delete this address?",
+  "mansoura_talkha_corner_of_agriculture_street_al-Maghazi_tower": "Mansoura - Talkha - Corner of Agriculture St - Al Maghazi Tower",
+  "office": "Office",
+  "agriculture_street": "Agriculture Street",
+  "al-maghazi_tower": "Al Maghazi Tower",
+  "received": "Received",
+  "cancelled": "Cancelled",
+  "order_number": "Order Number",
+  "show": "Show",
+  "order_history": "Order History",
+  "delivery_address": "Delivery Address",
+  "order_status": "Order Status",
+  "it_has_been_canceled.": "It has been cancelled.",
+  "total_price:": "Total Price:",
+  "1000.00 pounds": "1000 EGP",
+  "delivery_to:home": "Delivery To: Home",
+  "azzhar_street 2,hawalli,nasr city": "2 Azzhar St, Hawalli, Nasr City",
+  "price:": "Price:",
+  "20 pounds": "20 EGP",
+  "total:": "Total:",
+  "the_minimum_order": "Minimum Order",
+  "2000 pounds": "2000 EGP",
+  "total": "Total",
+  "3000 pounds": "3000 EGP",
+  "less than the minimum required to complete the purchase. Remaining to complete the purchase is 1700 pounds.": "Below the minimum required for checkout. Remaining amount to complete the order: 1700 EGP.",
+  "subtotal": "Subtotal",
+  "300 pounds": "300 EGP",
+  "payment": "Payment",
+  "choose address": "Select Address",
+  "add new address": "Add New Address",
+  "an address already exists": "Address already exists",
+  "add a new address": "Add a New Address",
+  "name the title (house-apartment-office)": "Label Address (House - Apartment - Office)",
+  "delivery address": "Delivery Address",
+  "area": "Area",
+  "name/Number of the building (apartment-tower-villa)": "Building Name/Number (Apartment - Tower - Villa)",
+  "apartment/Villa Number": "Apartment/Villa Number",
+  "add address": "Add Address",
+  "choose delivery time": "Choose Delivery Time",
+  "delivery now": "Deliver Now",
+  "delivery later": "Deliver Later",
+  "today": "Today",
+  "tomorrow": "Tomorrow",
+  "payment method": "Payment Method",
+  "cash on delivery": "Cash on Delivery",
+  "the subtotal": "Subtotal",
+  "delivery fees": "Delivery Fees",
+  "discount rate": "Discount Rate",
+  "pounds": "EGP",
+  "the request has been successfully executed.": "Your request has been completed successfully.",
+  "Please wait": "Please Wait",
+  "bill": "Bill",
+  "invoice number": "Invoice Number",
+  "invoice date": "Invoice Date",
+  "total quantity": "Total Quantity",
+  "total invoice": "Total Invoice",
+  "deduction / addition": "Deduction / Addition",
+  "the final price": "Final Price",
+  "tracking the order": "Track Order",
+  "home page": "Home Page",
+  "number": "Number",
+  "product name": "Product Name",
+  "amount": "Quantity",
+  "price piece": "Unit Price",
+  "pepsi 1.5 liters carton": "Pepsi 1.5L Carton",
+  "order date April 11, 2025": "Order Date: April 11, 2025",
+  "the order has been received": "Order Received",
+  "your order has been successfully received and will be processed soon. Thank you for choosing us": "Your order has been received and will be processed shortly. Thank you for choosing us!",
+  "the order has been confirmed": "Order Confirmed",
+  "your order has been confirmed successfully and we are now in the process of preparing it for shipment to you": "Your order has been confirmed. We’re preparing it for shipment.",
+  "the order is in the preparation stage": "Order Being Prepared",
+  "the order is on its way to you. It will be delivered by shipping service soon": "Order is on its way. Delivery will be made soon.",
+  "on the way to you": "On the Way",
+  "the order is currently in preparation. It will be ready for shipping as soon as possible": "Order is being prepared and will be shipped shortly.",
+  "delivered": "Delivered",
+  "your order has been successfully received, thank you for your purchase. We hope you are satisfied with your products": "Your order has been delivered successfully. Thank you for your purchase. We hope you are satisfied!",
+  "shop now": "Shop Now",
+  "the new password": "New Password"
 }
-
