Update the  LOGIN AND REGISTER

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,9 +1,27 @@
 {
     "select_branch": "اختر الفرع",
+    "please_enter_your_first_name": "من فضلك ادخال الاسم الأول",
+    "please_enter_your_last_name": "من فضلك ادخال الاسم الأخير",
+    "please_enter_your_phone_number": "من فضلك ادخل رقم الهاتف",
+    "please_enter_your_email": "من فضلك ادخال البريد الالكتروني",
+    "please_enter_your_password": "من فضلك ادخال كلمة المرور",
+    "please_confirm_your_password": "من فضلك تأكد من كلمة المرور",
+    "please_enter_your_city":"من فضلك ادخال المدينة",
+    "please_enter_your_street":"من فضلك ادخال الشارع",
+    "please_enter_building_name_or_number":"من فضلك ادخال اسم او رقم المبني",
+    "please_enter_apartment_or_villa_number":"من فضلك ادخال رقم الشقه او الفيلا",
+    "please_enter_floor_number":"من فضلك ادخال رقم الطابق",
+    "please_enter_address_type":"من فضلك ادخال نوع العنوان",
+    "please_enter_delivery_instructions":"من فضلك ادخال تعليمات التوصيل",
+    
+    
+
     "cairo_branch": "فرع القاهرة",
     "mansoura_Branch": "فرع المنصورة",
+    "log in": "تسجيل دخول",
     "login": "تسجيل دخول",
     "follow_a_guest": "متابعة ضيف",
+    "no account":"تسجيل حساب جديد",
     "create_new_account": "تسجيل حساب جديد",
     "my_certificates": "شهاداتي",
     "email": "البريد الإلكتروني",
@@ -22,7 +40,7 @@
     "confirm_password": "تأكيد كلمة المرور",
     "sign up": "تسجيل",
     "phone_number_(not_less_than_11_digits)": "رقم الهاتف  (لا يقل عن 11 رقم)",
-    "password_(not_less_than_8_letters)": "كلمة المرور (لا تقل عن 8 حروف  )",
+    "password_(not_less_than_11_letters)": "كلمة المرور (لا تقل عن 11 حروف  )",
     "email_(optional)": "البريد الالكتروني(اختياري)",
     "address": "العنوان",
     "governorate": "المحافظة",
