--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,10 +1,33 @@
 {
   "select_branch": "Select Branch",
+  "please_enter_your_first_name":"Please Enter Your First Name",
+  "please_enter_your_last_name":"Please Enter Your Last Name",
+  "please_enter_your_phone_number":"Please Enter Your Phone Number",
+  "please_enter_your_email":"Please Enter Your Email",
+  "please_enter_your_password":"Please Enter Your Password",
+  "please_confirm_your_password":"Please Confirm Your Password",
+  
+  "please_enter_your_city":"Please Enter Your City",
+  "please_enter_your_street":"Please Enter Your Street",
+  "please_enter_building_name_or_number":"Please Enter Building Name or Number",
+  "please_enter_floor_number":"Please Enter Floor Number",
+  "please_enter_apartment_or_villa_number":"Please Enter Apartment or Villa Number",
+  "please_enter_address_type":"Please Enter Address Type",
+  "please_enter_delivery_instructions":"Please Enter Delivery Iinstructions",
+
+
+
+  
+  
+ 
   "cairo_branch": "Cairo Branch",
+  
   "mansoura_Branch": "Mansoura Branch",
   "login": "Login",
-  "follow_a_guest": "Continue as Guest",
-  "create_new_account": "Create New Account",
+  "log in": "Log In",
+  "follow_a_guest": "Continuo as a Guest",
+  "create_new_account":"Create new Account",
+  "no account": "Not signed up for SKAKER, Create Account",
   "my_certificates": "My Certificates",
   "email": "Email",
   "password": "Password",
@@ -16,17 +39,17 @@
   "country": "Country",
   "gender": "Gender",
   "birth_date": "Birth Date",
-  "have_account": "Already have an account? Login",
+  "have_account": "ٌRegister a New Account?Login",
   "first_name": "First Name",
   "last_name": "Last Name",
   "confirm_password": "Confirm Password",
   "sign up": "Sign Up",
   "phone_number_(not_less_than_11_digits)": "Phone number (at least 11 digits)",
-  "password_(not_less_than_8_letters)": "Password (minimum 8 characters)",
+  "password_(not_less_than_8_letters)": "Password length must be minimum of 11 characters long",
   "email_(optional)": "Email (optional)",
   "address": "Address",
-  "governorate": "Governorate",
-  "region": "Region",
+  "governorate": "Select Governorate",
+  "region": "Select Area",
   "street": "Street",
   "house": "House",
   "delivery_instructions": "Delivery Instructions",
@@ -36,10 +59,10 @@
   "favorites": "Favorites",
   "menu": "Menu",
   "city": "City",
-  "name_number_of_the_building_(building_tower_villa)": "Building Name/Number (Apartment - Tower - Villa)",
+  "name_number_of_the_building_(building_tower_villa)": "Building Name/Number(Building-Tower-Villa)",
   "floor": "Floor",
-  "apartment_number": "Apartment Number",
-  "name_the_title": "Label Address",
+  "apartment_number": "Apartment Nember",
+  "name_the_title": "Label(Home-Office-Apartment)",
   "egypt": "Egypt",
   "type_here_the_one_you_want_to_search_for": "Type here what you're looking for",
   "wait_for_us_soon_wait_for_us_soon_wait_for_us_soon_wait_for_us_soon": "Coming soon, stay tuned...",
