--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,19 +1,20 @@
 {
   "select_branch": "Select Branch",
-  "please_enter_your_first_name":"Please Enter Your First Name",
-  "please_enter_your_last_name":"Please Enter Your Last Name",
-  "please_enter_your_phone_number":"Please Enter Your Phone Number",
-  "please_enter_your_email":"Please Enter Your Email",
-  "please_enter_your_password":"Please Enter Your Password",
-  "please_confirm_your_password":"Please Confirm Your Password",
+  "please_enter_your_first_name":"Enter Your First Name",
+  "please_enter_your_last_name":"Enter Your Last Name",
+  "please_enter_your_phone_number":"Enter Your Phone Number",
+  "please_enter_your_email":"Enter Your Email",
+  "please_enter_your_password":"Enter Your Password",
+  "please_confirm_your_password":"Confirm Your Password",
+  "enter erea":"Enter erea",
   
-  "please_enter_your_city":"Please Enter Your City",
-  "please_enter_your_street":"Please Enter Your Street",
-  "please_enter_building_name_or_number":"Please Enter Building Name or Number",
-  "please_enter_floor_number":"Please Enter Floor Number",
-  "please_enter_apartment_or_villa_number":"Please Enter Apartment or Villa Number",
-  "please_enter_address_type":"Please Enter Address Type",
-  "please_enter_delivery_instructions":"Please Enter Delivery Iinstructions",
+  "please_enter_your_city":"Enter Your City",
+  "please_enter_your_street":"Enter Your Street",
+  "please_enter_building_name_or_number":"Enter Building Name or Number",
+  "please_enter_floor_number":"Enter Floor Number",
+  "please_enter_apartment_or_villa_number":"Enter Apartment or Villa Number",
+  "please_enter_address_type":"Enter Address Type",
+  "please_enter_delivery_instructions":"Enter Delivery Iinstructions",
 
 
 
@@ -25,9 +26,9 @@
   "mansoura_Branch": "Mansoura Branch",
   "login": "Login",
   "log in": "Log In",
-  "follow_a_guest": "Continuo as a Guest",
+  "follow_a_guest": "Continue as a Guest",
   "create_new_account":"Create new Account",
-  "no account": "Not signed up for SKAKER, Create Account",
+  "no account": "Not signed up , Create Account",
   "my_certificates": "My Certificates",
   "email": "Email",
   "password": "Password",
@@ -39,13 +40,14 @@
   "country": "Country",
   "gender": "Gender",
   "birth_date": "Birth Date",
-  "have_account": "ٌRegister a New Account?Login",
+  "have_account": "Already have an account? Login",
   "first_name": "First Name",
+  "don't have an account?": "Don't have an account?",
   "last_name": "Last Name",
   "confirm_password": "Confirm Password",
   "sign up": "Sign Up",
   "phone_number_(not_less_than_11_digits)": "Phone number (at least 11 digits)",
-  "password_(not_less_than_11_letters": "Password length must be minimum of 11 characters long",
+  "password(not_less_than_8_letters)": "Password length must be minimum of 8 characters long",
   "email_(optional)": "Email (optional)",
   "address": "Address",
   "governorate": "Select Governorate",
